.provarCaches/00D6C0000000xA6UAI/objects/Logged_Exception__c.object
<CustomObject>
    <fields>
        <fullName>Class_Id__c</fullName>
        <label>Class Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  Class_Id__c , &apos;View Class&apos;, &apos;_BLANK&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_to_Notify__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer to Notify</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Logged Exeptions</relationshipLabel>
        <relationshipName>Logged_Exeptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception_Description__c</fullName>
        <description>Includes Stack Trace, DML operation info, etc</description>
        <label>Exception Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <label>Organization Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Exception</label>
        <referenceTo>Logged_Exception__c</referenceTo>
        <relationshipLabel>Logged Exeptions</relationshipLabel>
        <relationshipName>Logged_Exeptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <label>Session Id</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Describes the type of Exception that has been logged. These values are drawn from the Exception type list that can be found in Salesforce&apos;s Apex documentation.</description>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Logged_Exeptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Logged Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Exception_Description__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Who__c</columns>
        <columns>Session_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CTIScreenPop</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Exception_Description__c</columns>
        <columns>Type__c</columns>
        <columns>Who__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>contains</operation>
            <value>Class.CTIScreenPopCtlr</value>
        </filters>
        <label>CTIScreenPop</label>
    </listViews>
    <listViews>
        <fullName>Class_cls_Payment_Automation_Service</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Class_Name__c</columns>
        <columns>Resolved__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Exception_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>contains</operation>
            <value>cls_Payment_Automation_Service</value>
        </filters>
        <label>Class.cls_Payment_Automation_Service</label>
    </listViews>
    <nameField>
        <displayFormat>Ex{0000}</displayFormat>
        <label>Logged Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logged Exeptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>